--- a/index10.html
+++ b/index10.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criando do Zero</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
     </header>
 
     <main>
-
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quas iusto repellat quasi minus explicabo eos at consequuntur alias repudiandae officia, vero quo corrupti accusamus temporibus dicta. Omnis, iusto suscipit?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repellat nemo quaerat. Nam quasi voluptatum expedita illo accusamus fugit vero aperiam culpa, aspernatur qui ullam. Incidunt officiis voluptatum maxime culpa?Lorem ipsum dolor sit, amet consectetur adipisicing elit. In nihil doloremque maiores sunt quos, dolores consequuntur earum autem temporibus culpa veniam illo ab assumenda? Facilis corporis minima omnis laboriosam Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore laborum esse nostrum in nisi illo quibusdam tempora aliquid voluptatibus ea, commodi et rerum blanditiis omnis officiis, temporibus doloribus repellat suscipit.</p>
     </main>
 
     <footer>
